@@ -17,6 +17,7 @@ Other features
 * Persist tab hash in URL to allow direct navigation to tabs in the admin interface (Ben Weatherman)
 * Animate the chevron icon when opening sub-menus in the admin (Carlo Ascani)
 * Look through the target link and target page slug (in addition to the old slug) when searching for redirects in the admin (Michael Harrison)
+* Remove support for IE6 to IE9 from project template (Samir Shah)
 
 Bug fixes
 ~~~~~~~~~
